--- a/package.json
+++ b/package.json
@@ -5,22 +5,38 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.4.2",
+    "@chakra-ui/react": "^1.5.0",
     "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "firebase": "^8.3.2",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^4.1.2",
+    "framer-motion": "^4.1.3",
+    "lazysizes": "^5.3.2",
+    "lodash": "^4.17.21",
+    "mobx": "^6.1.8",
+    "mobx-react-lite": "^3.2.0",
     "next": "10.1.3",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.30.3",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
+    "babel-jest": "^26.6.3",
+    "dotenv": "^8.2.0",
+    "firestore-jest-mock": "^0.10.0",
+    "jest": "^26.6.3",
     "typescript": "^4.2.3"
   }
 }
