--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "axios": "^0.21.1",
+    "bad-words": "^3.0.4",
     "dayjs": "^1.10.4",
     "firebase": "^8.3.2",
     "focus-visible": "^5.2.0",
@@ -31,6 +32,7 @@
     "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
+    "@types/bad-words": "^3.0.0",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "babel-jest": "^26.6.3",
