--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lodash": "^4.17.21",
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
-    "next": "10.1.3",
+    "next": "^12.3.4",
     "next-google-fonts": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -40,6 +40,6 @@
     "firestore-jest-mock": "^0.10.0",
     "jest": "^26.6.3",
     "nanoid": "^3.1.22",
-    "typescript": "^4.2.3"
+    "typescript": "^4.3.2"
   }
 }
