--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "firebase": "^9.21.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.12.7",
+    "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "mobx": "^6.9.0",
     "mobx-react-lite": "^3.4.3",
