--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.4",
     "@types/react-dom": "18.2.3",
+    "@vercel/og": "^0.5.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "eslint": "8.39.0",
