--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
     "@plaiceholder/next": "^2.5.0",
     "@types/node": "18.16.3",
     "@types/react": "18.2.4",
@@ -22,7 +19,6 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^10.12.7",
     "next": "13.3.4",
     "plaiceholder": "^2.5.0",
     "react": "18.2.0",
@@ -30,5 +26,10 @@
     "react-icons": "^4.8.0",
     "sharp": "^0.32.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
