--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@plaiceholder/next": "^2.5.0",
     "@rmwc/linear-progress": "^8.0.7",
-    "@types/node": "18.16.3",
-    "@types/react": "18.2.4",
-    "@types/react-dom": "18.2.3",
+    "@types/node": "20.2.0",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "@vercel/og": "^0.5.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
+    "eslint": "8.40.0",
+    "eslint-config-next": "^13.4.2",
     "focus-visible": "^5.2.0",
-    "next": "13.3.4",
+    "next": "^13.4.2",
     "plaiceholder": "^2.5.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "sharp": "^0.32.1",
     "typescript": "5.0.4"
